fixed contact section overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html, body {
 
 }
 
-#bio, #portfolio {
+#bio {
 
     height: 100vh;
 
@@ -16,11 +16,11 @@ html, body {
 
 #contact {
 
-    margin-bottom: 400px;
+    /* margin-bottom: 400px; */
 
 }
 
-#main-landing {
+#main-landing, #contact {
 
     height: 100vh;
 
@@ -186,9 +186,16 @@ nav, .nav-wrapper {
 
 }
 
+#contact {
+
+    background-image: url(../images/darkbg.png);
+    background-size: cover;
+
+}
+
 #contactSect {
 
-    margin-top: 450px; 
+    /* margin-top: 450px;  */
     padding-top: 5px; 
     
 }
@@ -246,7 +253,7 @@ nav, .nav-wrapper {
 
     #bio-Desc h3 {
 
-        font-size: 10px;
+        font-size: 30px;
 
     } 
 
@@ -254,6 +261,7 @@ nav, .nav-wrapper {
 
         white-space: normal;
         letter-spacing: .1px;
+        font-size: 30px;
 
     }
 
